[gd_scene load_steps=9 format=3 uid="uid://dpvuren1glkcn"]

[ext_resource type="Script" uid="uid://b4nowckmhibsh" path="res://main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://voiroqlgikpj" path="res://player.tscn" id="2_1bvp3"]
[ext_resource type="Texture2D" uid="uid://4c46l0pjkuhl" path="res://assets/road.png" id="3_272bh"]
[ext_resource type="AudioStream" uid="uid://db6l8jhngmonr" path="res://assets/Beep.ogg" id="3_lquwl"]
[ext_resource type="PackedScene" uid="uid://2bd6qqtqcbey" path="res://hud.tscn" id="4_1bvp3"]
[ext_resource type="AudioStream" uid="uid://daulvtk8tjgmc" path="res://assets/blip-131856-point.mp3" id="5_lquwl"]
[ext_resource type="Texture2D" uid="uid://cxmay3trh2bqt" path="res://assets/grass_tile.png" id="6_7mycd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bvp3"]
size = Vector2(720, 116)

[node name="Main" type="Node2D"]
script = ExtResource("1_h2yge")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Grass1" type="TextureRect" parent="BackgroundLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_7mycd")
stretch_mode = 1

[node name="Grass2" type="TextureRect" parent="BackgroundLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1280.0
offset_bottom = -1280.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_7mycd")
stretch_mode = 1

[node name="World" type="Node2D" parent="."]

[node name="Road1" type="Sprite2D" parent="World"]
z_index = -10
position = Vector2(360, 640)
texture = ExtResource("3_272bh")

[node name="Road2" type="Sprite2D" parent="World"]
z_index = -10
position = Vector2(360, -640)
texture = ExtResource("3_272bh")

[node name="Player" parent="World" instance=ExtResource("2_1bvp3")]
position = Vector2(360, 973)

[node name="ScoreArea" type="Area2D" parent="World"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/ScoreArea"]
position = Vector2(360, 972)
shape = SubResource("RectangleShape2D_1bvp3")

[node name="HUD" parent="." instance=ExtResource("4_1bvp3")]

[node name="SfxBeep" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_lquwl")
volume_db = -12.11
pitch_scale = 0.7

[node name="SfxScore" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_lquwl")

[node name="ObstacleTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="area_entered" from="World/ScoreArea" to="." method="_on_ScoreArea_area_entered"]
